force-app/main/default/objects/AI_Model_Configuration__mdt/AI_Model_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>AI Model Configuration</label>
    <pluralLabel>AI Model Configurations</pluralLabel>
</CustomObject>