force-app/main/default/objects/AI_Model_Configuration__mdt/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <label>API_Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>