force-app/main/default/objects/AI_Model_Configuration__mdt/fields/API_Key_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>API_Key_Named_Credential__c</fullName>
    <label>API Key Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>