force-app/main/default/objects/AI_Model_Configuration__mdt/fields/Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Capabilities__c</fullName>
    <label>Capabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>