force-app/main/default/objects/AI_Model_Configuration__mdt/fields/Context_Window_Size__c.field-meta.xml
<CustomField>
    <fullName>Context_Window_Size__c</fullName>
    <label>Context_Window_Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>