force-app/main/default/objects/AI_Model_Configuration__mdt/fields/Cost_Per_Token__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Token__c</fullName>
    <label>Cost_Per_Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>