force-app/main/default/objects/AI_Model_Configuration__mdt/fields/Max_Context_Length__c.field-meta.xml
<CustomField>
    <fullName>Max_Context_Length__c</fullName>
    <label>Max Context Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>