force-app/main/default/objects/AI_Model_Configuration__mdt/fields/Model_Provider__c.field-meta.xml
<CustomField>
    <fullName>Model_Provider__c</fullName>
    <label>Model_Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>