force-app/main/default/objects/AI_Model_Configuration__mdt/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <label>Model_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>