force-app/main/default/objects/AI_Model_Configuration__mdt/fields/ModelIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ModelIdentifier__c</fullName>
    <label>ModelIdentifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>