force-app/main/default/objects/AI_Model_Configuration__mdt/fields/Rate_Limit_Per_Minute__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_Per_Minute__c</fullName>
    <label>Rate_Limit_Per_Minute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>