force-app/main/default/objects/AI_Model_Configuration__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort_Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>