force-app/main/default/objects/AI_Model_Configuration__mdt/fields/Supported_Features__c.field-meta.xml
<CustomField>
    <fullName>Supported_Features__c</fullName>
    <label>Supported Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>