force-app/main/default/objects/AI_Model_Configuration__mdt/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>